feat: onboarding path ready screen

--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -73,7 +73,7 @@
     "All other topics will be waiting for you. You don't lose anything": "Wszystkie pozostałe tematy będą na Ciebie czekać. Niczego nie tracisz. :)",
 
     "The path is ready!": "Ścieżka jest gotowa!",
-    "We will start with the topics you have chosen. MyGowi will guide you step by step.": "Zaczniemy od tematów, które wybrałaś. MyGowi poprowadzi Cię krok po kroku."
+    "We will start with the topics you have chosen. MyGowi will guide you step by step": "Zaczniemy od tematów, które wybrałaś. MyGowi poprowadzi Cię krok po kroku."
   },
   "loginTexts": {
     "Welcome back!": "Witaj ponownie!",
