--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -13,7 +13,7 @@
     "Other": "Inne",
     "Don't have an account? Register.": "Nie masz konta? Zarejestruj się.",
     "Forgot your password?": "Zapomniałaś hasła?",
-    "Log in": "Zaloguj się.",
+    "Log in": "Zaloguj się",
     "Password is not correct.": "Hasło nie jest poprawne.",
     "Send reset link.": "Wyślij link resetujący.",
     "Did not receive the message?": "Nie dostałeś wiadomości?",
@@ -49,7 +49,7 @@
     "Password": "Hasło",
     "Repeat password": "Powtórz hasło",
     "min. 8 characters": "min. 8 znaków",
-    "address@email.com": "adres@email.com",
+    "address@email": "adres@email.com",
     "Create account": "Utwórz konto",
     "Your name": "Twoje imię",
     "My name is": "Moje imię to",
