feat: reworked sign in page

--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -81,7 +81,7 @@
   },
   "createAccTexts": {
     "Create your account": "Stwórz swoje konto",
-    "This will allow us to save your progress and tailor your development path to you.": "Dzięki temu zapiszemy Twoje postępy i dopasujemy ścieżkę rozwoju do Ciebie."
+    "This will allow us to save your progress and tailor your development path to you": "Dzięki temu zapiszemy Twoje postępy i dopasujemy ścieżkę rozwoju do Ciebie."
   },
   "restorePasswordTexts": {
     "Forgotten password?": "Zapomniane hasło?",
