feat: after questions screen

--- a/assets/i18n/locales/pl-female.json
+++ b/assets/i18n/locales/pl-female.json
@@ -6,7 +6,7 @@
     "Let's start": "Zaczynamy",
     "Register": "Zarejestruj się",
     "I already have an account": "Mam już konto",
-    "Or log in using:": "Lub zaloguj sie za pomocą:",
+    "Or log in using": "Lub zaloguj sie za pomocą:",
     "I accept the Terms and Conditions and Privacy Policy.": "Akceptuję Regulamin i Politykę prywatności.",
     "Woman": "Kobieta",
     "Man": "Mężczyzna",
@@ -67,7 +67,7 @@
     "Every moment you dedicate to yourself matters. Thanks to this, you get closer and closer to what you truly desire.": "Każdy moment, który poświęcasz \nsobie, ma znaczenie. Dzięki temu \nzbliżasz się coraz bardziej do tego, \nczego naprawdę pragniesz.",
 
     "Start your journey": "Zacznij swoją podróż",
-    "Create an account to monitor your development and match the path to yourself. It will take you less than a minute.": "Załóż konto, by obserwować swój rozwój i dopasować drogę do siebie. Zajmie Ci to mniej niż minutę.",
+    "Create an account to monitor your development and match the path to yourself": "Załóż konto, by obserwować swój rozwój i dopasować drogę do siebie. Zajmie Ci to mniej niż minutę.",
 
     "This is the last step": "To już ostatni krok",
     "Choose the areas you want to discover first. Take into account your GROWWEB results - they may suggest where it is worth starting": "Wybierz obszary, które chcesz odkrywać w pierwszej kolejności. Weź pod uwagę swoje wyniki z GROWWEB - mogą podpowiedzieć Ci, od czego warto zacząć.",
